--- a/Genesis/Genesis.vcxproj
+++ b/Genesis/Genesis.vcxproj
@@ -160,6 +160,8 @@
     <ClInclude Include="src\Genesis\Events\Event.h" />
     <ClInclude Include="src\Genesis\Events\KeyEvent.h" />
     <ClInclude Include="src\Genesis\Events\MouseEvent.h" />
+    <ClInclude Include="src\Genesis\Layer.h" />
+    <ClInclude Include="src\Genesis\LayerStack.h" />
     <ClInclude Include="src\Genesis\Log.h" />
     <ClInclude Include="src\Genesis\Window.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
@@ -167,6 +169,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Genesis\Application.cpp" />
+    <ClCompile Include="src\Genesis\Layer.cpp" />
+    <ClCompile Include="src\Genesis\LayerStack.cpp" />
     <ClCompile Include="src\Genesis\Log.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\hzpch.cpp">
